# megatest

./: .gitignore  CMakeLists.txt  cube.mega  project.manifest  square.mega  test.cpp
cmake/: CMakeLists.txt  blueprint_include.cmake  boost_include.cmake  clang_include.cmake  common_include.cmake  ed_include.cmake  eg_include.cmake  houdini_include.cmake  mega_include.cmake  messagepack_include.cmake  program_include.cmake  protobuf_include.cmake  pybind11_include.cmake  unreal_include.cmake
deepthought/: CMakeLists.txt
deepthought/testhost/: CMakeLists.txt
deepthought/testhost/testproject/: CMakeLists.txt  deep.eg  test.eg
editor/: CMakeLists.txt  main.cpp  mainWindow.ui  main_window.hpp
mega/: CMakeLists.txt  cube.mega  cube_extra.mega  data_types.mega  lego.mega  links.mega  meta.mega  root.mega  simple.sch  square.mega  test.cpp  test.hpp  test_schematic.sch  toaster.mega
mega/basic_tests/: CMakeLists.txt  basic.cpp  test.cpp
mega/move_tests/: CMakeLists.txt  test.cpp
mega/stuff/: CMakeLists.txt  pentagon.mega
mega/test_component/: CMakeLists.txt  test.cpp  test.hpp
py_test/: basic_construct.py  basic_tests.py  move_tests.py
reddwarf/: CMakeLists.txt
reddwarf/geometry/: CMakeLists.txt
reddwarf/geometry/testproject/: .eg  CMakeLists.txt  geometry.cpp  geometry.eg  geometry.hpp
reddwarf/python/: CMakeLists.txt
reddwarf/python/testproject/: CMakeLists.txt  python.eg  scripts.py  test.eg
reddwarf/python2/: CMakeLists.txt
reddwarf/python2/testproject/: .eg  CMakeLists.txt  python2.eg
reddwarf/testhost/: CMakeLists.txt
reddwarf/testhost/testproject/: .eg  CMakeLists.txt  another.eg  extra.cpp  red.eg  sharedIntTraits.hpp  test.eg
reddwarf/testhost/testproject2/: .eg  CMakeLists.txt  test.eg
reddwarf/unreal/: CMakeLists.txt
reddwarf/unreal/testproject/: .eg  CMakeLists.txt  unreal.cpp  unreal.eg
stuff/: CMakeLists.txt
test_prog/: CMakeLists.txt  main.cpp  unit_test_wrapper.hpp
